--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 </header>
 <main>
 <section class="relative">
-<div class="absolute inset-0 bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAu1IfWNdfjDyUwnl-t2QQALFONepYFHY6c6kLeqs-0J3swIuNrXOsRU0W3I9OUyoEtBNIhbhHX05GjGGv4_4ezm6V3ySpF3s4WnIBkUbNjLcJ0Ou2ID0gCWAfDJagD4CPBlzwOC-8hVCvk4vs_bgVCTT1v8Y2Mzx0H0sW9RsZjEZhpchgZVAda5qhrDuS2vgCNWkdiFUygh4E6Ti_bZtNRUZHlzH-y2JBz11i-gA9N-MNp0su2YBALHvY9nNrBdbLHYqX65rRpYXw");'></div>
-<div class="absolute inset-0 bg-black/50"></div>
-<div class="relative mx-auto flex min-h-[60vh] max-w-screen-lg flex-col items-center justify-center gap-6 px-4 py-16 text-center text-white">
+<div class="absolute inset-0 bg-cover bg-center"><img src="Gemini_Generated_Image_lnl0wllnl0wllnl0 (1).png" alt=""></div>
+<div class="absolute inset-0 bg-cover bg-center" style='background-image: url(");'></div>
+<div class="absolute inset-0 bg-white/3"></div>
+<div class="relative mx-auto flex min-h-[60vh] max-w-screen-lg flex-col items-center justify-center gap-6 px-4 py-16 text-center text-black">
 <h1 class="text-4xl font-extrabold leading-tight tracking-tighter md:text-5xl">Descubra onde sua energia vai parar</h1>
 <p class="max-w-2xl text-base font-light md:text-lg">Economize sem adivinhar. Com o Circuit, monitore o consumo de energia da sua casa em tempo real, por ambiente, e assuma o controle de suas contas.</p>
 <button class="mt-4 rounded-lg bg-[var(--primary-color)] px-8 py-3 font-bold text-[var(--text-primary)] transition-transform hover:scale-105 hover:bg-[var(--accent-color)]">
